// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuDropdown should be rendered correctly 1`] = `
<div
  className="container uui-button-box uui-enabled -clickable root type-primary"
  href={null}
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="container uui-icon uui-enabled"
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#chevron-down-24.svg"
      />
    </svg>
  </div>
</div>
`;

exports[`MainMenuDropdown should be rendered correctly 2`] = `
<div
  className="container uui-button-box uui-enabled -clickable root type-primary"
  href={null}
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="uui-caption"
  >
    Test button
  </div>
  <div
    className="container uui-icon uui-enabled"
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#chevron-down-24.svg"
      />
    </svg>
  </div>
</div>
`;
